--- a/style3.css
+++ b/style3.css
@@ -1,3 +1,7 @@
+body {
+    font-family: "Itim", cursive;
+}
+
 .msgpub {
     display: flex;
     justify-content: space-between;
@@ -70,6 +74,78 @@
     width: 50px;
     border-radius: 50px;
 }
+
+.discution {
+    background-color: #d9d9d9;
+    border-radius: 30px;
+    height: fit-content;
+    display: inline-flex;
+    margin-bottom: 30px;
+    width: fit-content;
+}
+
+h2 {
+    font-size: 20px;
+    font-weight: bolder;
+    font-family: "Itim", cursive;
+    margin: 0 auto;
+}
+.nomdis {
+    font-size: 10px;
+    margin: 0 auto;
+}
+.heurnom {
+    display: flex;
+    justify-content: space-between;
+}
+.heur {
+    margin: 0 auto;
+}
 .entremsg {
     display: grid;
+}
+.entresmsg {
+    margin-left: 100px;
+    margin-top: 60px;
+}
+
+.mod {
+    margin-left: 20px;
+}
+
+.max {
+    max-width: 50px;
+}
+
+.gris {
+    text-align: start;
+}
+.bleu {
+    display: flex;
+    justify-self: center;
+    color: white;
+    background-color: #2564ff;
+    font-weight: bolder;
+    width: 200px;
+    border-radius: 60px;
+    text-align: center;
+}
+input {
+    font-size: 20px;
+    color: #787878;
+    background-color: #d9d9d9;
+    border: none;
+    height: 40px;
+    margin-bottom: 50px;
+
+    border-radius: 60px;
+    font-family: "Itim", cursive;
+    width: 500px;
+}
+.form {
+    display: flex;
+}
+
+img {
+    border-radius: 30px;
 }
