--- a/style2.css
+++ b/style2.css
@@ -126,3 +126,36 @@ h2 {
 .max {
     max-width: 50px;
 }
+
+.gris {
+    text-align: start;
+}
+.bleu {
+    display: flex;
+    justify-self: center;
+    color: white;
+    background-color: #2564ff;
+    font-weight: bolder;
+    width: 200px;
+    border-radius: 60px;
+    text-align: center;
+}
+input {
+    font-size: 20px;
+    color: #787878;
+    background-color: #d9d9d9;
+    border: none;
+    height: 40px;
+    margin-bottom: 50px;
+
+    border-radius: 60px;
+    font-family: "Itim", cursive;
+    width: 500px;
+}
+.form {
+    display: flex;
+}
+
+img {
+    border-radius: 30px;
+}
