--- a/style3.css
+++ b/style3.css
@@ -55,6 +55,9 @@ body {
     display: flex;
 }
 
+.listes {
+    display: block;
+}
 .amis {
     font-weight: bolder;
     font-family: "Itim", cursive;
@@ -75,6 +78,10 @@ body {
     border-radius: 50px;
 }
 
+img {
+    border-radius: 30px;
+}
+
 .discution {
     background-color: #d9d9d9;
     border-radius: 30px;
@@ -85,7 +92,7 @@ body {
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bolder;
     font-family: "Itim", cursive;
     margin: 0 auto;
@@ -102,11 +109,6 @@ h2 {
     margin: 0 auto;
 }
 .entremsg {
-    display: grid;
-}
-.entremsgs {
-    margin-left: 100px;
-    margin-top: 60px;
     display: grid;
 }
 
@@ -137,8 +139,8 @@ input {
     background-color: #d9d9d9;
     border: none;
     height: 40px;
-    margin-bottom: 50px;
-
+    margin-top: 100px;
+    margin-left: 20px;
     border-radius: 60px;
     font-family: "Itim", cursive;
     width: 500px;
@@ -149,4 +151,23 @@ input {
 
 img {
     border-radius: 30px;
+}
+
+.entremsgs {
+    display: flex;
+}
+
+.align {
+    display: grid;
+    margin-left: 50px;
+}
+
+button {
+    font-family: "Itim", cursive;
+    color: white;
+    background-color: #2564ff;
+    font-weight: bolder;
+    width: 150px;
+    height: 150px;
+    border-radius: 60px;
 }
